added initial markup for flexbox challenge1

--- a/day3/challenge3/style.css
+++ b/day3/challenge3/style.css
@@ -34,7 +34,8 @@ img {
 
 /* utilities */
 
-[href="#hero"] {
+[href="#hero"],
+.testing-understanding {
   display: inline-block;
   position: absolute;
   /* outline: 1px solid red; */
