added simple comments to img declarations

--- a/day9/flexboxChallenge2/02-6 - challenge 2/ourStyle.css
+++ b/day9/flexboxChallenge2/02-6 - challenge 2/ourStyle.css
@@ -33,6 +33,7 @@ img {
     the img will shrink and grow as its parent element shrink and grows
     */
   max-width: 100%;
+  /* width of 100% will be 100% of its parent's container/element */
   display: block;
   height: auto;
 }
