--- a/day11/navChallenge/starter/ourStyles.css
+++ b/day11/navChallenge/starter/ourStyles.css
@@ -253,3 +253,13 @@ so that it takes up the available space.
   margin-left: auto;
   margin-right: auto;
 }
+
+@media (max-width: 37.5em) {
+  .columns {
+    flex-flow: column nowrap;
+  }
+
+  .columns > * + * {
+    margin: 1em auto 0 auto;
+  }
+}
