--- a/day12/flexboxChallenge4/styles.css
+++ b/day12/flexboxChallenge4/styles.css
@@ -123,7 +123,7 @@ html {
 
 body {
   font-family: var(--ff-roboto);
-  font-size: var(--fs-700);
+  font-size: var(--fs-500);
   line-height: 1.5;
   /* padding: 0.5rem; */
 }
@@ -153,6 +153,7 @@ body {
 
 .columns {
   display: flex;
+  flex-flow: column nowrap;
 }
 
 .columns > * {
@@ -160,7 +161,25 @@ body {
 }
 
 .columns > * + * {
-  margin-left: 2rem;
+  margin: 2em 0 0 0;
+  /* margin-top: 2rem; */
+}
+
+@media screen and (min-width: 38.75em) {
+  .columns {
+    display: flex;
+    flex-flow: row nowrap;
+  }
+
+  .columns > * {
+    flex-basis: 100%;
+  }
+
+  .columns > * + * {
+    margin: 0 0 0 2em;
+    /* margin-top: 0;
+    margin-left: 2rem; */
+  }
 }
 
 [class*="col-"] {
@@ -223,14 +242,26 @@ section:not(:first-of-type) p {
   text-align: center;
 }
 
+@media screen and (max-width: 38.75em) {
+  .hero {
+    padding: 0 1em;
+  }
+}
+
 .container {
   max-width: 70.5em;
   margin: 0 auto;
   padding: 5em;
 }
 
+@media screen and (max-width: 38.75em) {
+  .container {
+    padding: 1.5em;
+  }
+}
+
 .quality [role="banner"] {
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
 }
 
 /* .custom [role="banner"] {
