--- a/finalChallenge/styles.css
+++ b/finalChallenge/styles.css
@@ -106,6 +106,11 @@ select {
   }
 }
 
+body {
+  line-height: 1.5;
+  font-family: var(--ff-Oswald);
+}
+
 /* utilities */
 
 .flow-content > * + * {
@@ -166,10 +171,38 @@ select {
 }
 
 .container {
-  width: 80%;
+  width: 90%;
   max-width: var(--container-width);
   margin: 0 auto;
+  padding: 1.5em 0 1.5em;
 }
+
+/* typeography */
+
+.title-primary {
+  font-size: 2rem;
+}
+
+.text-white {
+  color: var(--clr-white);
+}
+
+.selling-point h2,
+.secondary-title,
+.footer__nav-title,
+ul.footer__nav-list li:first-child a {
+  color: var(--clr-primary);
+}
+
+.section-title {
+  text-align: center;
+}
+
+p {
+  font-family: var(--ff-Montserrat);
+}
+
+/* remember to change width and padding at desktop screen */
 
 .nav-toggle {
   width: 3em;
@@ -177,6 +210,8 @@ select {
   background-color: var(--clr-primary);
   border: none;
   border-radius: 50%;
+  position: absolute;
+  left: 0;
 }
 
 .hamburger,
@@ -191,22 +226,22 @@ select {
 
 .hamburger {
   margin: auto;
-  transform: translateY(10px);
+  transform: translateY(15px);
 }
 
 .hamburger::before {
-  transform: translateY(-0.3rem);
+  transform: translateY(-0.5rem);
 }
 
 .hamburger::after {
-  transform: translateY(-1.08rem);
+  transform: translateY(-1.55rem);
 }
 
 .nav-bar {
   /* background-color: var(--clr-400); */
   /* display: flex;
   align-items: center; */
-  padding: 1em 1em;
+  /* padding: 1em 1em; */
   text-align: center;
 }
 
@@ -232,12 +267,40 @@ li.nav__item {
   padding: 1em 0;
 }
 
-li.nav__item:hover {
-  background-color: var(--clr-primary);
+/* making button, logo and nav item center at mobile display */
+
+.center-elements {
+  display: flex;
+  align-items: center;
+  position: relative;
 }
 
+/* li.nav__item:hover {
+  background-color: var(--clr-primary);
+} */
+
+.nav__link.btn {
+  padding: 0.3em 0.75em;
+  border-radius: 10em;
+}
+
+a.nav__link:hover {
+  color: var(--clr-primary);
+}
+
+a.nav__link.btn:hover {
+  background-color: var(--clr-white);
+  color: var(--clr-primary);
+}
+
+/* specificity might be too high (0,3,2) */
+
+/* li.nav__item:not(:last-child) a.nav__link {
+  color: red;
+} */
 .logo {
   display: inline-block;
+  margin: 0 auto;
 }
 
 .show {
@@ -245,9 +308,15 @@ li.nav__item:hover {
 }
 
 .header {
+  background-color: var(--clr-400);
+}
+
+.hero,
+.sidebar > div,
+.footer {
   background-color: var(--clr-300);
 }
 
-section {
-  padding: 0 1em;
+.selling-points {
+  background-color: lightgray;
 }
