--- a/finalChallenge/styles.css
+++ b/finalChallenge/styles.css
@@ -178,6 +178,38 @@ body {
   padding: 1.5em 0 1.5em;
 }
 
+@media screen and (min-width: 43.75em) {
+  /* navigation */
+  .less-padding {
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+  }
+  /* don't display the hamburger button */
+  .nav-toggle {
+    display: none;
+  }
+  /* move logo to the left of navbar */
+  .logo {
+    display: inline;
+    margin: 0;
+  }
+  /* make section with class nav-bar a flex container. its children will be the container with our logo and our ul */
+  .nav-bar {
+    display: flex;
+    justify-content: space-between;
+  }
+  /* give the parent container that has our ul in it 75% flex-basis so we can space out our nav menu */
+  .nav {
+    flex-basis: 75%;
+  }
+  /* since the nav-menu(ul element) parent container has a flex-basis of 75% we can use space-evenly to space out our li */
+  .nav_list {
+    display: flex;
+    margin: 0;
+    justify-content: space-evenly;
+  }
+}
+
 /* typeography */
 
 .title-primary,
@@ -226,6 +258,13 @@ p {
   left: 0;
 }
 
+@media screen and (min-width: 43.75em) {
+  /* don't display the hamburger button */
+  .nav-toggle {
+    display: none;
+  }
+}
+
 .hamburger,
 .hamburger::before,
 .hamburger::after {
@@ -257,12 +296,48 @@ p {
   text-align: center;
 }
 
+@media screen and (min-width: 43.75em) {
+  /* make section with class nav-bar a flex container. its children will be the container with our logo and our ul */
+  .nav-bar {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
 /* general styles */
 
 /* navigation */
 
 .nav {
   color: var(--clr-white);
+}
+
+@media screen and (min-width: 43.75em) {
+  /* give the parent container that has our ul in it 75% flex-basis so we can space out our nav menu */
+  .nav {
+    flex-basis: 75%;
+  }
+  /* since the nav-menu(ul element) parent container has a flex-basis of 75% we can use space-evenly to space out our li */
+  .nav__list {
+    display: flex;
+    margin: 0;
+    justify-content: space-evenly;
+  }
+}
+/***************** if we have the @media min-width: 43.75em below our @media min-width: 62.5em. the code in the 43.75em will always win because of the source order.
+1000px and 700px breakpoint will always meet the 700px breakpoint when we have the min-width: 43.75em below the 62.5em @media queries.
+*********************/
+@media screen and (min-width: 62.5em) {
+  /* give the parent container that has our ul in it 75% flex-basis so we can space out our nav menu */
+  .nav {
+    flex-basis: 50%;
+  }
+  /* since the nav-menu(ul element) parent container has a flex-basis of 75% we can use space-evenly to space out our li */
+  .nav__list {
+    display: flex;
+    margin: 0;
+    justify-content: space-evenly;
+  }
 }
 
 .nav__list {
@@ -316,8 +391,14 @@ a.nav__link.btn:hover {
   margin: 0 auto;
 }
 
-.show {
+.hidden {
   display: none;
+}
+
+@media screen and (min-width: 43.75em) {
+  .hidden {
+    display: block;
+  }
 }
 
 .header {
@@ -353,3 +434,5 @@ a.nav__link.btn:hover {
 .footer__nav-list:first-of-type {
   margin-top: 3em;
 }
+
+/* notes: at 700px breakpoint nav element with class of nav we want to its flex-basis to be 75% but at the 1000px breakpoint we want its flex-basis to be 50% */
