--- a/featureTestingToggleContent/profile-match-toggle-content.css
+++ b/featureTestingToggleContent/profile-match-toggle-content.css
@@ -303,8 +303,9 @@ we need the arrow to be an element in the DOM so we can select it with JS
 
 input[type="radio"] {
   /* display: none; */
-  /* position: absolute; */
-  /* z-index: 150; */
+  /* position: absolute;
+  z-index: -1000; */
+  transform: translateY(-9999rem);
 }
 
 .label-container {
@@ -333,6 +334,7 @@ input[type="radio"] {
   border-radius: 100vw;
   cursor: pointer;
   position: relative;
+  /* z-index: 10; */
 }
 
 /* background color of label will depend on which radio button is clicked */
